--- a/build.gradle
+++ b/build.gradle
@@ -5,9 +5,13 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath "com.android.tools.build:gradle:4.1.1"
+//        classpath "com.android.tools.build:gradle:4.1.1"
+        classpath 'com.android.tools.build:gradle:4.2.0-alpha01'
+
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
+
+        classpath 'com.google.gms:google-services:4.3.5'
     }
 }
 
@@ -15,6 +19,11 @@ allprojects {
     repositories {
         google()
         jcenter()
+
+        // 3. aar 이 추가된 상대경로
+        flatDir {
+            dirs 'libs'
+        }
     }
 }
 
